--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1",
+    "mariadb": "^2.5.3",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7"
-  }
+  },
+  "type": "module"
 }
